# Labrador

./: .gitignore  .gitmodules  .travis.yml  Makefile  README.md  flake.nix  imgui.ini  labrador_bootstrap_pi  llms.txt  result
.claude/skills/labrador-qa/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/define-firmware-ver-action/: action.yml
.github/actions/download-firmware-action/: action.yml
.github/workflows/: android.yml  avr.yml  avr_ver_def.yml  continuous.yml  dependabot.yml  firmware.yml  linux.yml  mac.yml  osv-scanner-scheduled.yml  unified-app.yml  windows.yml
.github/workflows/action-avr-make/: action.yml
AVR_Code/: Makefile
AVR_Code/USB_BULK_TEST/: Makefile
AVR_Code/USB_BULK_TEST/src/: globals.h  main.c  main.h  tiny_calibration.c  tiny_calibration.h  tiny_dma.c  tiny_dma.h  tiny_eeprom.c  tiny_eeprom.h
AVR_Code/USB_BULK_TEST/src/ASF/common/services/usb/udc/: udc.c
AVR_Code/USB_BULK_TEST/src/ASF/xmega/drivers/usart/: usart.c  usart.h
AVR_Code/USB_BULK_TEST/src/ASF/xmega/drivers/usb/: usb_device.c
AVR_Code/USB_BULK_TEST/src/config/: conf_usb.h
AVR_Code/aio_test/: Makefile  aio_peek.c  aio_transport_test  aio_transport_test.cpp
Android_App/: __README.md  settings.gradle.kts
Android_App/app/: build.gradle.kts
Android_App/app/src/main/: AndroidManifest.xml
Android_App/app/src/main/assets/font/: Readme.txt
Android_App/app/src/main/cpp/: CMakeLists.txt  daq_ui.cpp  daq_ui.h  inputs_ui.cpp  inputs_ui.h  logic_decode_ui.cpp  logic_decode_ui.h  main.cpp  plot_ui.cpp  plot_ui.h  psu_ui.cpp  settings_panel.cpp  settings_panel.h  sig_gen_ui.cpp  sig_gen_ui.h  trigger_ui.cpp  trigger_ui.h  ui_tile.cpp  ui_tile.h  virtual_transform_ui.cpp  virtual_transform_ui.h
Android_App/app/src/main/cpp/cmake/: FindSDL3.cmake
Android_App/app/src/main/java/com/EspoTek/Labrador/: MainActivity.java
Android_App/app/src/main/res/xml/: device_filter.xml
Android_App/gradle/: libs.versions.toml
Desktop_Interface/: Labrador.pro  androidusbdriver.cpp  desktop_settings.h  functiongencontrol.cpp  functiongencontrol.h  genericusbdriver.cpp  genericusbdriver.h  isobuffer.cpp  isobuffer.h  isobuffer_file.cpp  isodriver.cpp  isodriver.h  mainwindow.cpp  mainwindow.h  make_appimage  scoperangeenterdialog.cpp  unixusbdriver.cpp  unixusbdriver.h  winusbdriver.cpp
Desktop_Interface/build_android/libusb-242/: libusb.h
Desktop_Interface/build_android/package_source/: AndroidManifest.xml
Desktop_Interface/build_android/package_source/src/: androidInterface.java
Desktop_Interface/build_mac/libdfuprog/lib/: libdfuprog-0.9.dylib
Desktop_Interface/build_win/: Labrador.aip
Desktop_Interface/debian/: rules
Desktop_Interface/resources/firmware/: flash.bat  labrafirm_000c_03.hex
Desktop_Interface/ui_elements/: cursorenabler.cpp  deviceconnecteddisplay.cpp  espocombobox.cpp
Desktop_Interface/ui_files_desktop/: mainwindow.ui
Desktop_Interface/ui_files_mobile/: mainwindow.ui
Documentation/: README.md  getting-started.md  llm-guide.md  pinout.md  troubleshooting.md  tutorial.md  user-manual.md
Librador_API/___librador/librador/: librador.cpp  librador.h  usbcallhandler.cpp
Librador_API/___librador/librador_shared_library/: o1buffer.cpp
PCB/: Tinylab_proto1.kicad_pcb  Tinylab_proto1.kicad_prl  Tinylab_proto1.kicad_pro  Tinylab_proto1.kicad_sch  fp-lib-table
Unified_App/: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
Unified_App/android/app/: build.gradle.kts
Unified_App/android/app/src/main/: AndroidManifest.xml
Unified_App/android/app/src/main/java/com/EspoTek/Labrador/: MainActivity.java
Unified_App/android/app/src/main/res/values/: strings.xml
Unified_App/android/gradle/wrapper/: gradle-wrapper.properties
Unified_App/docs/: PLAN.md  PORTING_CONTRACT.md
Unified_App/firmware/: labrafirm_000A_03.hex  labrafirm_000C_03.hex
Unified_App/librador/: i2cdecoder.cpp  i2cdecoder.h  isobufferbuffer.cpp  librador.cpp  librador.h  librador_platform.h  o1buffer.cpp  o1buffer.h  uartstyledecoder.cpp  uartstyledecoder.h  usbcallhandler.cpp  usbcallhandler.h
Unified_App/packaging/linux/apprun-hooks/: udev-helper.sh
Unified_App/packaging/macos/: Info.plist
Unified_App/packaging/windows/: .gitignore  labrador.iss  mingw32-cross.cmake
Unified_App/src/: main.cpp
Unified_App/src/app/: App.cpp  App.h  AppBase.cpp  AppBase.h  DebugConsole.cpp  DebugConsole.h  settings.cpp  settings.h  textures.cpp  textures.h
Unified_App/src/instruments/: AnalysisToolsWidget.hpp  CalibrationControl.hpp  ControlWidget.hpp  DAQControl.hpp  DAQReplay.hpp  DigitalOutControl.hpp  InputsControl.hpp  LogicDecodeControl.hpp  MiniHLInput.h  MultimeterControl.hpp  OSCControl.hpp  OscData.hpp  PSUControl.hpp  PlotWidget.hpp  SGControl.hpp  SignalType.hpp  UIComponents.hpp  WaveformFile.h  fftw3.h  util.cpp  util.h
Unified_App/src/platform/: android_hooks.h  android_ui.h  file_dialog.cpp  file_dialog.h  paths.cpp  paths.h
Unified_App/src/platform/android/: android_ui.cpp  librador_android_glue.cpp
Unified_App/src/qa/: QaSuite.cpp  QaSuite.h
Unified_App/src/ui/: Frontend.h  InstrumentFrontend.cpp  InstrumentFrontend.h
Unified_App/src/ui/android/: AndroidFrontend.cpp  AndroidFrontend.h  daq_ui.cpp  daq_ui.h  inputs_ui.cpp  logic_decode_ui.cpp  plot_ui.cpp  psu_ui.h  trigger_ui.cpp  virtual_transform_ui.cpp
Unified_App/src/ui/desktop/: DesktopFrontend.cpp  DesktopFrontend.h
Unified_App/src/ui/lowres/: LowResFrontend.cpp  LowResFrontend.h
Unified_App/src/ui/tablet/: TabletFrontend.cpp  TabletFrontend.h
Unified_App/tools/: librador_bulk_test.cpp  qa_predict_findings.json  qa_predict_report.py
libdfuprog/: CMakeLists.txt  config.h  libdfuprog.c  libdfuprog.h  libdfuprog.pri  libdfuprog.pro
